bisa lanjut section 2

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section1/Smart-Platform-LandingPage-Section1.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section1/Smart-Platform-LandingPage-Section1.css
@@ -1,7 +1,7 @@
 #SPL-LandingPage-Section1 {
     height: 745px;
     width: 100vw;
-    border: 1px solid red;
+    border-bottom: 1px solid red;
 }
 
 .SPL-LandingPage-Section1-Background {
