--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+
 html {
     overflow: scroll;
     overflow-x: hidden;
