SPL Landing page Section 4 Scroll Header

--- a/src/components/Card/SPL Landing Page/CardSPLLandingPage.css
+++ b/src/components/Card/SPL Landing Page/CardSPLLandingPage.css
@@ -6,6 +6,7 @@
     padding-right: 42px;
     box-shadow: 0px 0px 6px 3px rgba(207, 207, 207, 0.25);
     border-radius: 5px;
+    background-color: white;
 }
 
 .CardSPLLandingPage-Logo {
