SPL Landing Page Section 4 Done

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section4/Smart-Platform-LandingPage-Section4.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section4/Smart-Platform-LandingPage-Section4.css
@@ -56,7 +56,11 @@
 
 .SPL-LandingPage-Section4-Scroll-Content-Container {
     height: 777px;
-    border: 1px solid black;
     overflow: auto;
     overflow-x: hidden;
+}
+
+.SPL-LandingPage-Section4-Scroll-Vector {
+    margin-top: 64px;
+    margin-left: 332px;
 }
