input poppins google font

--- a/src/components/Card/SPL Landing Page/CardSPLLandingPage.css
+++ b/src/components/Card/SPL Landing Page/CardSPLLandingPage.css
@@ -15,7 +15,7 @@
 
 .CardSPLLandingPage-Desc {
     margin-top: 49px;
-    font-family: "Poppins", sans-serif;
+    font-family: poppins-400;
     text-align: justify;
     font-size: 12px;
 }
