--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section1/Smart-Platform-LandingPage-Section1.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section1/Smart-Platform-LandingPage-Section1.css
@@ -1,13 +1,3 @@
-@font-face {
-    font-family: poppins-thin;
-    src: url("../../../../src/font/poppins.thin.ttf");
-}
-
-@font-face {
-    font-family: poppins-bold;
-    src: url("../../../../src/font/poppins.bold.ttf");
-}
-
 #SPL-LandingPage-Section1 {
     height: 745px;
     width: 100vw;
@@ -33,7 +23,7 @@
 
 .SPL-LandingPage-Section1-Text-container h3 {
     font-size: 30px;
-    font-family: poppins-bold;
+    font-family: poppins-medium;
 }
 
 .SPL-LandingPage-Section1-Text-container h1 {
