--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section2/Smart-Platform-LandingPage-Section2.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section2/Smart-Platform-LandingPage-Section2.css
@@ -3,7 +3,7 @@
     height: 1097px;
     width: 100vw;
     background: #fbfbfb;
-    font-family: "Poppins", sans-serif;
+    /* font-family: "Poppins", sans-serif; */
     box-shadow: 24px 8px 24px 16px rgba(0, 0, 0, 0.25);
 }
 
