--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,30 @@
 /* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"); */
 
+/* @font-face {
+    font-family: poppins-thin;
+    src: url("../../../../src/font/poppins.thin.ttf");
+}
+
+@font-face {
+    font-family: poppins-bold;
+    src: url("../../../../src/font/poppins.bold.ttf");
+} */
+@font-face {
+    font-family: poppins-400;
+    src: url("src/font/Poppins/Poppins-Regular.ttf");
+}
+
+@font-face {
+    font-family: poppins-500;
+    src: url("src/font/Poppins/Poppins-Medium.ttf");
+}
+
+@font-face {
+    font-family: poppins-700;
+    src: url("src/font/Poppins/Poppins-Bold.ttf");
+}
+
+
 html {
     overflow: scroll;
     overflow-x: hidden;
