--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section1/Smart-Platform-LandingPage-Section1.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section1/Smart-Platform-LandingPage-Section1.css
@@ -48,9 +48,8 @@
     font-family: poppins-700;
     display: inline-block;
     transition: all 0.3s ease-in-out;
-    /* letter-spacing: 0.5px; */
-    font-weight: 600;
     letter-spacing: 2px;
+    letter-spacing: 0.7px;
 }
 
 .SPL-LandingPage-Section1-Text-container button:hover {
