--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section2/Smart-Platform-LandingPage-Section2.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section2/Smart-Platform-LandingPage-Section2.css
@@ -3,7 +3,6 @@
     height: 1097px;
     width: 100vw;
     background: #fbfbfb;
-    /* font-family: "Poppins", sans-serif; */
     box-shadow: 24px 8px 24px 16px rgba(0, 0, 0, 0.25);
 }
 
@@ -14,13 +13,13 @@
 
 .SPL-LandingPage-Section2-Text1 {
     font-size: 20px;
-    font-weight: 500;
+    font-family: poppins-500;
 }
 
 .SPL-LandingPage-Section2-Text2 {
     margin-top: -11px;
     font-size: 40px;
-    font-weight: 900;
+    font-family: poppins-700;
 }
 
 .SPL-LandingPage-Section2-Card-Container {
