SPL Landing Page Section 3 Done font

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section3/Smart-Platform-LandingPage-Section3.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section3/Smart-Platform-LandingPage-Section3.css
@@ -3,14 +3,13 @@
     height: 338px;
     background-color: #484848;
     color: white;
-    font-family: "Poppins", sans-serif;
 }
 
 .SPL-LandingPage-Section3-Title {
     text-align: center;
     padding-top: 51px;
     font-size: 40px;
-    font-weight: 700;
+    font-family: poppins-700;
 }
 
 .SPL-LandingPage-Section3-Desc {
@@ -18,6 +17,7 @@
     text-align: center;
     font-size: 17px;
     letter-spacing: 0.9px;
+    font-family: poppins-400;
 }
 
 .SPL-LandingPage-Section3-Button {
@@ -27,6 +27,5 @@
     background: #d23d3d;
     border-radius: 65px;
     border: 1px solid transparent;
-    font-family: "Poppins", sans-serif;
-    font-weight: 400;
+    font-family: poppins-700;
 }
