SPL Landing Page Section 4 Done

--- a/src/components/Card/SPL Landing Page/ScrollCardSPLLandingPage.css
+++ b/src/components/Card/SPL Landing Page/ScrollCardSPLLandingPage.css
@@ -21,7 +21,7 @@
 
 .ScrollCardSPLLandingPage-Text-Container h1 {
     font-size: 27px;
-    font-weight: 700;
+    font-family: poppins-700;
     letter-spacing: 0.005em;
 }
 
@@ -29,7 +29,7 @@
     width: 391px;
     font-size: 17px;
     letter-spacing: 0.005em;
-    font-weight: 400;
+    font-family: poppins-400;
     text-align: justify;
     margin-top: 14px;
 }
