--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section5/Smart-Platform-LandingPage-Section5.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section5/Smart-Platform-LandingPage-Section5.css
@@ -1,6 +1,5 @@
 #SPL-LandingPage-Section5 {
     height: 475px;
-    font-family: "Poppins", sans-serif;
 }
 
 .SPL-LandingPage-Section5-Content-Container {
@@ -9,7 +8,6 @@
     height: 468px;
     background-color: #f7f7f7;
     margin-left: 139px;
-
     border: 1px solid transparent;
     box-shadow: 0px 0px 0px 4px rgba(0, 0, 0, 0.26);
     border-radius: 5px;
@@ -20,7 +18,7 @@
     text-transform: uppercase;
     margin-top: 50px;
     color: #323232;
-    font-weight: 900;
+    font-family: poppins-700;
 }
 
 .SPL-LandingPage-Section5-Content-CostSaving-Logo {
@@ -55,7 +53,7 @@
 .SPL-LandingPage-Section5-Content-CostSaving1-Title {
     font-size: 27px;
     color: #d23d3d;
-    font-weight: 900;
+    font-family: poppins-700;
     letter-spacing: 0.5px;
     text-transform: capitalize;
 }
@@ -63,7 +61,7 @@
 .SPL-LandingPage-Section5-Content-CostSaving1-Desc {
     width: 390px;
     height: 30px;
-    font-weight: 400;
+    font-family: poppins-400;
     font-size: 17px;
     text-align: center;
     text-transform: capitalize;
