--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section6/Smart-Platform-LandingPage-Section6.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section6/Smart-Platform-LandingPage-Section6.css
@@ -5,7 +5,7 @@
 
 .SPL-LandingPage-Section6-title {
     font-size: 40px;
-    font-weight: 900;
+    font-family: poppins-700;
     margin-top: 110px;
     text-align: center;
     text-transform: uppercase;
@@ -13,7 +13,7 @@
 
 .SPL-LandingPage-Section6-andMore {
     text-align: center;
-    font-weight: 900;
+    font-family: poppins-700;
     font-size: 30px;
     position: relative;
     top: 45px;
