SPL Landing Page Section 7 dan 8

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section7/Smart-Platform-LandingPage-Section7.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section7/Smart-Platform-LandingPage-Section7.css
@@ -1,7 +1,13 @@
 #SPL-LandingPage-Section7 {
     height: 373px;
     background-color: #484848;
-    font-family: "Poppins", sans-serif;
+}
+
+.SPL-LandingPage-Section7-Background {
+    position: absolute;
+    width: 794.42px;
+    margin-left: 740.86px;
+    margin-top: 23px;
 }
 
 .SPL-LandingPage-Section7-Title {
