--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/SmartPlatformLandingPage.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/SmartPlatformLandingPage.css
@@ -16,3 +16,11 @@
 .SPL-LandingPage-content-container-section-2-3 {
     box-shadow: 24px 8px 24px 16px rgba(0, 0, 0, 0.25);
 }
+
+.SPL-LandingPage-Section7-Background2 {
+    position: absolute;
+    left: 1045.35px;
+    top: 4702px;
+    width: 238.23px;
+    height: 381.62px;
+}
