--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section8/Smart-Platform-LandingPage-Section8.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section8/Smart-Platform-LandingPage-Section8.css
@@ -2,7 +2,8 @@
     height: 456px;
     border: 1px solid red;
     padding-left: 157px;
-    font-family: "Poppins", sans-serif;
+    background-color: #f7f7f7;
+    /* font-family: "Poppins", sans-serif; */
 }
 
 .SPL-LandingPage-Section8-SPL-Logo {
@@ -15,14 +16,14 @@
 .SPL-LandingPage-Section8-SPL-ColLeft-Row1 {
     width: 329px;
     margin-top: 23px;
-    font-weight: 700;
+    font-family: poppins-700;
     font-size: 18px;
     line-height: 27px;
     color: #484848;
 }
 
 .SPL-LandingPage-Section8-SPL-ColLeft-Row2 {
-    font-weight: 400;
+    font-family: poppins-400;
     font-size: 16px;
     line-height: 24px;
     color: #000000;
@@ -31,4 +32,43 @@
 
 .SPL-LandingPage-Section8-SPL-ColLeft-Row3 {
     margin-top: -9px;
+    font-family: poppins-400;
+    font-size: 16px;
+}
+
+.SPL-LandingPage-Section8-SPL-ColLeft-Row4 {
+    font-family: poppins-400;
+    font-size: 16px;
+}
+
+.SPL-LandingPage-Section8-SPL-ColMid-Row1 {
+    width: 329px;
+    margin-top: 23px;
+    font-family: poppins-700;
+    font-size: 16px;
+    line-height: 27px;
+    color: #484848;
+}
+
+.SPL-LandingPage-Section8-SPL-ColMid-Row1 i {
+    font-size: 24px;
+    margin-top: 12px;
+    margin-right: 9.9px;
+}
+
+.SPL-LandingPage-Section8-SPL-ColMid-Row2 {
+    width: 329px;
+    margin-top: 23px;
+    font-family: poppins-400;
+    font-size: 16px;
+    line-height: 27px;
+}
+
+.SPL-LandingPage-Section8-SPL-ColMid-Row3 {
+    width: 329px;
+    height: 38px;
+    margin-top: 46px;
+    font-family: poppins-400;
+    font-size: 16px;
+    line-height: 20px;
 }
