--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section3/Smart-Platform-LandingPage-Section3.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section3/Smart-Platform-LandingPage-Section3.css
@@ -28,4 +28,10 @@
     border-radius: 65px;
     border: 1px solid transparent;
     font-family: poppins-700;
+    transition: all 0.4s ease-in-out;
+}
+
+.SPL-LandingPage-Section3-Button:hover {
+    background: transparent;
+    border: 1px solid white;
 }
