move style in component SPL LandingPage Section 1

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section1/Smart-Platform-LandingPage-Section1.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section1/Smart-Platform-LandingPage-Section1.css
@@ -52,6 +52,10 @@
     letter-spacing: 0.7px;
 }
 
+.SPL-LandingPage-Section1-Text-container button > img {
+    margin-left: 5px;
+}
+
 .SPL-LandingPage-Section1-Text-container button:hover {
     box-shadow: 0 4px 4px 0px rgb(0, 0, 0, 0.3);
     transform: scale(1.025);
