move style in component SPL LandingPage Section 3

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section3/Smart-Platform-LandingPage-Section3.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section3/Smart-Platform-LandingPage-Section3.css
@@ -20,6 +20,13 @@
     font-family: poppins-400;
 }
 
+.SPL-LandingPage-Section3-Button-Container {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
 .SPL-LandingPage-Section3-Button {
     width: 321px;
     height: 47px;
