move style in component SPL LandingPage Section 4

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section4/Smart-Platform-LandingPage-Section4.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section4/Smart-Platform-LandingPage-Section4.css
@@ -45,6 +45,10 @@
     letter-spacing: 0.5px;
 }
 
+.SPL-LandingPage-Section4-Scroll-Header-Title > span {
+    color: #d23d3d;
+}
+
 .SPL-LandingPage-Section4-Scroll-Content-Container {
     height: 777px;
     overflow: auto;
