move style in component SPL LandingPage Section 6

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section6/Smart-Platform-LandingPage-Section6.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section6/Smart-Platform-LandingPage-Section6.css
@@ -19,3 +19,62 @@
     top: 45px;
     right: 3px;
 }
+
+.SPL-LandingPage-Section6-logo-row1 {
+    margin-top: 41px;
+    margin-left: -61px;
+    display: flex;
+    height: 200px;
+    justify-content: center;
+    align-items: center;
+}
+
+.SPL-LandingPage-Section6-logo-row1 > .Telkom {
+    width: 184px;
+    height: 142px;
+}
+
+.SPL-LandingPage-Section6-logo-row1 > .Kemenkes {
+    width: 187px;
+    height: 87px;
+    position: relative;
+    left: 41px;
+}
+
+.SPL-LandingPage-Section6-logo-row1 > .SekNatNegara {
+    width: 192px;
+    height: 192px;
+    position: relative;
+    left: 58px;
+    bottom: 10px;
+}
+
+.SPL-LandingPage-Section6-logo-row1 > .Pertamina {
+    width: 266px;
+    height: 62px;
+    position: relative;
+    left: 74px;
+    bottom: 12px;
+}
+
+.SPL-LandingPage-Section6-logo-row2 {
+    margin-top: -10px;
+    margin-left: -31px;
+    display: flex;
+    height: 130px;
+    justify-content: center;
+    align-items: center;
+}
+
+.SPL-LandingPage-Section6-logo-row2 > .Dishub {
+    width: 84px;
+    height: 97px;
+}
+
+.SPL-LandingPage-Section6-logo-row2 > .AHM {
+    width: 203px;
+    height: 105px;
+    position: relative;
+    left: 37px;
+    bottom: 17px;
+}
