move style in component SPL LandingPage Section 8

--- a/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section8/Smart-Platform-LandingPage-Section8.css
+++ b/src/container/1. Smart-Platform/Smart-Platform-LandingPage/Smart-Platform-LandingPage-Section8/Smart-Platform-LandingPage-Section8.css
@@ -77,3 +77,15 @@
     width: 318px;
     height: 230px;
 }
+
+.SPL-LandingPage-Section8-Content-Container {
+    display: flex;
+}
+
+.SPL-LandingPage-Section8-Content-Left {
+    display: flex;
+}
+
+.SPL-LandingPage-Section8-Content-Mid {
+    display: flex;
+}
